--- a/Sensi-Tape/Base.lproj/Main.storyboard
+++ b/Sensi-Tape/Base.lproj/Main.storyboard
@@ -78,12 +78,119 @@
                     <view key="view" contentMode="scaleToFill" id="rNl-yt-spr">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8h3-C9-680">
+                                <rect key="frame" x="10" y="59" width="373" height="710"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eIc-W8-EcI">
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="233.33333333333334"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="g7x-SZ-eUR">
+                                        <rect key="frame" x="0.0" y="238.33333333333331" width="373" height="233.33333333333331"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JQT-dd-dwC">
+                                                <rect key="frame" x="0.0" y="0.0" width="184" height="233.33333333333334"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soN-qA-mg4" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="184" height="116.66666666666667"/>
+                                                        <color key="backgroundColor" systemColor="secondaryLabelColor"/>
+                                                    </view>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v9i-KD-zY5">
+                                                        <rect key="frame" x="0.0" y="116.66666666666669" width="184" height="116.66666666666669"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="reg-Uq-RY2">
+                                                <rect key="frame" x="189" y="0.0" width="184" height="233.33333333333334"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Configuration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uRP-Qk-DTl">
+                                                        <rect key="frame" x="8" y="7.9999999999999964" width="168" height="59.666666666666657"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="UsC-YX-59T">
+                                                        <rect key="frame" x="8" y="67.666666666666686" width="168" height="79"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tG4-TB-tV0">
+                                                                <rect key="frame" x="0.0" y="0.0" width="168" height="25.666666666666668"/>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wGo-S2-0qh">
+                                                                <rect key="frame" x="-2" y="25.666666666666689" width="172" height="54.333333333333343"/>
+                                                                <connections>
+                                                                    <action selector="temperatureSliderChangedWithSender:" destination="HJq-rJ-879" eventType="valueChanged" id="W2Q-Qf-xe6"/>
+                                                                </connections>
+                                                            </slider>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="XLj-2l-aGB">
+                                                        <rect key="frame" x="8" y="146.66666666666669" width="168" height="78.666666666666686"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compression" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-Co-b5k">
+                                                                <rect key="frame" x="0.0" y="0.0" width="168" height="25.333333333333332"/>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="sK7-Di-LF2">
+                                                                <rect key="frame" x="-2" y="25.333333333333318" width="172" height="54.333333333333343"/>
+                                                                <connections>
+                                                                    <action selector="compressionSliderChangedWithSender:" destination="HJq-rJ-879" eventType="valueChanged" id="fem-ha-S8T"/>
+                                                                </connections>
+                                                            </slider>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="UsC-YX-59T" firstAttribute="leading" secondItem="reg-Uq-RY2" secondAttribute="leading" constant="5" id="LVb-Fk-Ne3"/>
+                                                    <constraint firstAttribute="trailing" secondItem="UsC-YX-59T" secondAttribute="trailing" constant="5" id="WwP-bR-QCw"/>
+                                                </constraints>
+                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iLU-CF-yel">
+                                        <rect key="frame" x="0.0" y="476.66666666666657" width="373" height="233.33333333333331"/>
+                                        <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
+                                        <color key="sectionIndexBackgroundColor" systemColor="secondaryLabelColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="VnZ-ow-BmY">
+                                                <rect key="frame" x="0.0" y="50" width="373" height="43.666667938232422"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VnZ-ow-BmY" id="UfU-ue-9Ee">
+                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="K2V-9v-zbe"/>
                         <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="8h3-C9-680" secondAttribute="trailing" constant="10" id="193-Ad-Vj9"/>
+                            <constraint firstItem="K2V-9v-zbe" firstAttribute="bottom" secondItem="8h3-C9-680" secondAttribute="bottom" id="FfJ-xh-fd4"/>
+                            <constraint firstItem="8h3-C9-680" firstAttribute="top" secondItem="K2V-9v-zbe" secondAttribute="top" id="idl-ez-fA0"/>
+                            <constraint firstItem="8h3-C9-680" firstAttribute="leading" secondItem="K2V-9v-zbe" secondAttribute="leading" constant="10" id="wNk-6c-Vq9"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="lPs-fC-7Ic"/>
                     <navigationItem key="navigationItem" id="NwU-Ob-VPN"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="activityGraphView" destination="soN-qA-mg4" id="jRk-lT-Wh5"/>
+                        <outlet property="activityStackView" destination="JQT-dd-dwC" id="jcj-GQ-lSQ"/>
+                        <outlet property="batteryImageView" destination="v9i-KD-zY5" id="HtM-uE-1sj"/>
+                        <outlet property="compressionSlider" destination="sK7-Di-LF2" id="P7l-z0-Whc"/>
+                        <outlet property="configurationStackView" destination="reg-Uq-RY2" id="eEi-1d-U2t"/>
+                        <outlet property="recommendationTableView" destination="iLU-CF-yel" id="2cX-kE-6Aw"/>
+                        <outlet property="temperatureSlider" destination="wGo-S2-0qh" id="ycI-lz-woP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBJ-fR-88S" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,6 +202,7 @@
                 <tabBarController storyboardIdentifier="MainTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="el7-aY-T0M" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EsW-KI-Bxo">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -138,6 +246,9 @@
     <resources>
         <image name="gear" catalog="system" width="128" height="122"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondarySystemFillColor">
             <color red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
