Exercises and tableview controller

--- a/Sensi-Tape/Base.lproj/Main.storyboard
+++ b/Sensi-Tape/Base.lproj/Main.storyboard
@@ -152,13 +152,13 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iLU-CF-yel">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iLU-CF-yel">
                                         <rect key="frame" x="0.0" y="476.66666666666657" width="373" height="233.33333333333331"/>
-                                        <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
+                                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="sectionIndexBackgroundColor" systemColor="secondaryLabelColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="VnZ-ow-BmY">
-                                                <rect key="frame" x="0.0" y="50" width="373" height="43.666667938232422"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecommendationTableViewCell" id="VnZ-ow-BmY" customClass="RecommendationTableViewCell" customModule="Sensi_Tape" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="55.333332061767578" width="373" height="43.666667938232422"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VnZ-ow-BmY" id="UfU-ue-9Ee">
                                                     <rect key="frame" x="0.0" y="0.0" width="373" height="43.666667938232422"/>
