--- a/Sensi-Tape/Base.lproj/Main.storyboard
+++ b/Sensi-Tape/Base.lproj/Main.storyboard
@@ -177,46 +177,46 @@
                                     <constraint firstAttribute="height" constant="60" id="QJf-xx-Qk2"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pNO-dU-S17">
-                                <rect key="frame" x="8" y="283.66666666666674" width="377" height="465.33333333333326"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pgg-NU-YsP">
+                                <rect key="frame" x="8" y="129" width="377" height="145"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RpQ-I3-F8O" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="377" height="148.33333333333334"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjV-Z8-f30" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="158.33333333333331" width="377" height="148.66666666666669"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HR0-Ke-tRN" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="316.99999999999994" width="377" height="148.33333333333331"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </view>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pgg-NU-YsP">
-                                <rect key="frame" x="8" y="129" width="377" height="144.66666666666663"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="DATA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCo-gZ-UjH">
-                                        <rect key="frame" x="0.0" y="0.0" width="191.33333333333334" height="144.66666666666666"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCo-gZ-UjH">
+                                        <rect key="frame" x="0.0" y="0.0" width="183.66666666666666" height="145"/>
                                         <fontDescription key="fontDescription" name="Koulen-Regular" family="Koulen" pointSize="80"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Adc-ya-6K9">
-                                        <rect key="frame" x="201.33333333333337" y="0.0" width="175.66666666666663" height="144.66666666666666"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Adc-ya-6K9">
+                                        <rect key="frame" x="193.66666666666663" y="0.0" width="183.33333333333337" height="145"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Shl-5w-rvX">
-                                                <rect key="frame" x="0.0" y="0.0" width="175.66666666666666" height="129.66666666666666"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ActivityIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Shl-5w-rvX">
+                                                <rect key="frame" x="0.0" y="0.0" width="183.33333333333334" height="115.33333333333333"/>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6V-wg-0sJ">
-                                                <rect key="frame" x="0.0" y="129.66666666666669" width="175.66666666666666" height="15"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A brief description of the activity" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6V-wg-0sJ">
+                                                <rect key="frame" x="0.0" y="115.33333333333336" width="183.33333333333334" height="29.666666666666671"/>
                                                 <fontDescription key="fontDescription" name="Inconsolata-Regular" family="Inconsolata" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pNO-dU-S17">
+                                <rect key="frame" x="8" y="284" width="377" height="465"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RpQ-I3-F8O" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="148.33333333333334"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjV-Z8-f30" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="158.33333333333331" width="377" height="148.33333333333331"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HR0-Ke-tRN" customClass="LineGraphView" customModule="Sensi_Tape" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="316.66666666666663" width="377" height="148.33333333333337"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -265,38 +265,46 @@
                                     <constraint firstAttribute="height" constant="60" id="q0d-aN-hn6"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="LaL-4W-T9v">
-                                <rect key="frame" x="8" y="129" width="377" height="1085"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="LaL-4W-T9v">
+                                <rect key="frame" x="8" y="129" width="377" height="630"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACTIVITY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XVk-b3-57l">
-                                        <rect key="frame" x="0.0" y="0.0" width="377" height="144.66666666666666"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="ACTIVITY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XVk-b3-57l">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="0.0"/>
                                         <fontDescription key="fontDescription" name="Koulen-Regular" family="Koulen" pointSize="80"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Activity Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DHm-wL-TQV">
-                                        <rect key="frame" x="0.0" y="145.66666666666669" width="377" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Activity Title*" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DHm-wL-TQV">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="Inconsolata-Regular" family="Inconsolata" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dN-GF-vpG">
-                                        <rect key="frame" x="0.0" y="180.66666666666669" width="377" height="216"/>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2dN-GF-vpG">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="0.0"/>
                                     </pickerView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACTIVITY STATS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXC-xx-mdP" userLabel="Activity Stats">
-                                        <rect key="frame" x="0.0" y="397.66666666666663" width="377" height="36.333333333333314"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="ACTIVITY STATS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXC-xx-mdP" userLabel="Activity Stats">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="0.0"/>
                                         <fontDescription key="fontDescription" name="Koulen-Regular" family="Koulen" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Zj-AOu">
-                                        <rect key="frame" x="0.0" y="435" width="377" height="216"/>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0dW-Zj-AOu">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="163.66666666666666"/>
                                     </pickerView>
-                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ni-tn-1AQ">
-                                        <rect key="frame" x="0.0" y="652" width="377" height="216"/>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Ni-tn-1AQ">
+                                        <rect key="frame" x="0.0" y="163.66666666666669" width="377" height="216"/>
                                     </pickerView>
-                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PC1-nU-CnA">
-                                        <rect key="frame" x="0.0" y="869" width="377" height="216"/>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PC1-nU-CnA">
+                                        <rect key="frame" x="0.0" y="379.66666666666669" width="377" height="216.00000000000006"/>
                                     </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZu-Si-bAf" userLabel="Submit">
+                                        <rect key="frame" x="0.0" y="595.66666666666663" width="377" height="34.333333333333371"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray" title="Submit"/>
+                                        <connections>
+                                            <action selector="submitData" destination="nJt-ef-ZYR" eventType="touchUpInside" id="sgI-w0-QVH"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -306,6 +314,7 @@
                             <constraint firstItem="xgT-Ti-pVJ" firstAttribute="leading" secondItem="BrT-Ck-w7l" secondAttribute="leading" constant="8" id="2cu-oM-qvj"/>
                             <constraint firstItem="BrT-Ck-w7l" firstAttribute="trailing" secondItem="LaL-4W-T9v" secondAttribute="trailing" constant="8" id="66t-JL-2sz"/>
                             <constraint firstItem="LaL-4W-T9v" firstAttribute="leading" secondItem="BrT-Ck-w7l" secondAttribute="leading" constant="8" id="7yY-GM-W6c"/>
+                            <constraint firstItem="BrT-Ck-w7l" firstAttribute="bottom" secondItem="LaL-4W-T9v" secondAttribute="bottom" constant="10" id="Dbb-WL-riO"/>
                             <constraint firstItem="xgT-Ti-pVJ" firstAttribute="top" secondItem="BrT-Ck-w7l" secondAttribute="top" id="NvQ-Sl-n2s"/>
                             <constraint firstItem="LaL-4W-T9v" firstAttribute="top" secondItem="xgT-Ti-pVJ" secondAttribute="bottom" constant="10" id="czP-f2-E8D"/>
                             <constraint firstItem="BrT-Ck-w7l" firstAttribute="trailing" secondItem="xgT-Ti-pVJ" secondAttribute="trailing" constant="8" id="uOo-tp-e9t"/>
@@ -878,6 +887,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ActivityIcon" width="310" height="290"/>
         <image name="bell" catalog="system" width="125" height="128"/>
         <image name="chart.xyaxis.line" catalog="system" width="128" height="102"/>
         <image name="gear" catalog="system" width="128" height="122"/>
